[project]
name = "eversense-zero"
version = "0.1.0"
description = "Application to display users bloodsugar level on the Raspberry Pi Zero with a Display HAT"
authors = [
    {name = "Andréas Kühne",email = "andreas@kuhne.se"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "st7789 (>=1.0.1,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "gpiozero (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
